# zey_batch

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  reset_campaigns.py  run.sh  setup.sh  sync_opt_outs.py  sync_opt_outs.sh  test.sh  test_auth.sh  test_setup.py  test_twilio_connection.py  update_data.sh
config/: config.yml
src/sms_campaign/: __init__.py  cli.py  manager.py  sync_opt_outs.py
src/sms_campaign/models/: __init__.py  campaign.py  customer.py
src/sms_campaign/services/: __init__.py  opt_out_sync.py  sms_sender.py
src/sms_campaign/utils/: __init__.py  config.py  file_handler.py  logger.py  message_analyzer.py
